added the third blog

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My simple website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div>
@@ -16,6 +17,11 @@
         My second Website
     </h3>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta rerum dolorem at ab sapiente? Nostrum alias, repellat deleniti hic nesciunt dolorem tempore earum maiores quos eaque neque non quod ipsum delectus, atque recusandae ullam quaerat excepturi sed enim et blanditiis inventore dolor! Unde nobis natus, omnis, eius aperiam doloribus, magni sint velit minima laboriosam quisquam sapiente! Explicabo assumenda voluptatem hic sint rem facilis minima in vel, ratione odio, praesentium iusto autem fuga consequatur quidem doloremque id cumque eveniet eum dolores necessitatibus ea? Perferendis harum tempora odio? Esse dicta porro dolores doloribus officiis aut qui facere in odit unde. Ipsum, quidem.</p></div>
+    <div><h3>
+        My third Website
+    </h3>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta rerum dolorem at ab sapiente? Nostrum alias, repellat deleniti hic nesciunt dolorem tempore earum maiores quos eaque neque non quod ipsum delectus, atque recusandae ullam quaerat excepturi sed enim et blanditiis inventore dolor! Unde nobis natus, omnis, eius aperiam doloribus, magni sint velit minima laboriosam quisquam sapiente! Explicabo assumenda voluptatem hic sint rem facilis minima in vel, ratione odio, praesentium iusto autem fuga consequatur quidem doloremque id cumque eveniet eum dolores necessitatibus ea? Perferendis harum tempora odio? Esse dicta porro dolores doloribus officiis aut qui facere in odit unde. Ipsum, quidem.</p></div>
+
     
 </body>
 </html>
