--- a/index.html
+++ b/index.html
@@ -18,9 +18,19 @@
     </h3>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta rerum dolorem at ab sapiente? Nostrum alias, repellat deleniti hic nesciunt dolorem tempore earum maiores quos eaque neque non quod ipsum delectus, atque recusandae ullam quaerat excepturi sed enim et blanditiis inventore dolor! Unde nobis natus, omnis, eius aperiam doloribus, magni sint velit minima laboriosam quisquam sapiente! Explicabo assumenda voluptatem hic sint rem facilis minima in vel, ratione odio, praesentium iusto autem fuga consequatur quidem doloremque id cumque eveniet eum dolores necessitatibus ea? Perferendis harum tempora odio? Esse dicta porro dolores doloribus officiis aut qui facere in odit unde. Ipsum, quidem.</p></div>
     <div><h3>
-        My third Website
+        My third blog
     </h3>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta rerum dolorem at ab sapiente? Nostrum alias, repellat deleniti hic nesciunt dolorem tempore earum maiores quos eaque neque non quod ipsum delectus, atque recusandae ullam quaerat excepturi sed enim et blanditiis inventore dolor! Unde nobis natus, omnis, eius aperiam doloribus, magni sint velit minima laboriosam quisquam sapiente! Explicabo assumenda voluptatem hic sint rem facilis minima in vel, ratione odio, praesentium iusto autem fuga consequatur quidem doloremque id cumque eveniet eum dolores necessitatibus ea? Perferendis harum tempora odio? Esse dicta porro dolores doloribus officiis aut qui facere in odit unde. Ipsum, quidem.</p></div>
+    <div>
+        <h3 class="now">How to push incremental code</h3>
+        <ul>
+            <li>
+                git add
+            </li>
+            <li>git commit</li>
+            <li>git push</li>
+        </ul>
+    </div>
 
     
 </body>
